Fixed the Pointless Horizontal Scrolling being shown

--- a/src/Pages/Styles/gpa.css
+++ b/src/Pages/Styles/gpa.css
@@ -4,7 +4,6 @@
 }
 
 .bodyPart {
-    padding: 10px;
     width: 100%;
     display: flex;
     flex-direction: column;
